# Echo_KV

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  check_claims.py  make_overlay_figure.py  regenerate_x11_figure.py  run_multimodal_benchmark.py  run_text_benchmarks.py
benchmarks/results/: Qwen2_5-0_5B-Instruct_chunked_peak.json  Qwen2_5-0_5B-Instruct_needle.json  Qwen2_5-0_5B-Instruct_pareto.json  Qwen2_5-0_5B-Instruct_saving_vs_context.json  Qwen2_5-0_5B-Instruct_triviality.json  gemma_layer_overlay.json  gpt2_pareto.json  gpt2_triviality.json  smolvlm_multimodal.json  x11_scaling.json
examples/: multimodal.py  quickstart.py
src/echokv/: __init__.py  benchmarks.py  cli.py  core.py
tests/: test_echo_eager.py  test_fp16_guard.py  test_model_e2e.py  test_pruner.py  test_quant.py  test_schedule.py
