[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echokv"
version = "0.3.0"
description = "Training-free KV-cache compression from the attention echo space"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "echokv contributors" }]
keywords = ["transformers", "kv-cache", "inference", "llm", "attention", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "transformers>=4.45",
    "numpy>=1.23",
]

[project.optional-dependencies]
benchmarks = ["matplotlib>=3.6"]
dev = ["pytest>=7.0", "ruff>=0.4", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/MGALIKE/Echo_KV"
Repository = "https://github.com/MGALIKE/Echo_KV"
Issues = "https://github.com/MGALIKE/Echo_KV/issues"

[project.scripts]
echokv = "echokv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 long lines (prose-dense docstrings); E741 ambiguous names (l = layer index);
# E702 compound statements (deliberate dense style in the numeric core)
ignore = ["E501", "E741", "E702"]

[tool.pytest.ini_options]
markers = [
    "gpu: tests that need a GPU (deselect with -m 'not gpu')",
    "slow: tests that download/run a model (deselect with -m 'not slow')",
]
